--- a/.manifest.json
+++ b/.manifest.json
@@ -1,9 +1,9 @@
 {
   "liblabVersion": "2.10.4",
-  "date": "2025-01-07T14:35:50.891Z",
+  "date": "2025-01-07T16:22:58.228Z",
   "config": {
     "language": "go",
-    "apiId": 1590,
+    "apiId": 1629,
     "sdkName": "Celitech",
     "sdkVersion": "1.0.0",
     "languages": ["go"],
@@ -11,7 +11,7 @@
     "docs": ["snippets", "enhancedApiSpec"],
     "liblabVersion": "2",
     "deliveryMethods": ["zip"],
-    "apiVersion": "1.3.30",
+    "apiVersion": "1.0.0",
     "apiName": "Celitech",
     "specFilePath": "swagger.yaml",
     "languageOptions": {
@@ -63,17 +63,13 @@
       "httpMethodsToRetry": ["GET", "POST", "PUT", "DELETE", "PATCH", "HEAD", "OPTIONS"]
     },
     "multiTenant": true,
-    "hooksLocation": {
-      "bucketKey": "8790/hooks.zip",
-      "bucketName": "prod-liblab-api-stack-hooks"
-    },
     "includeWatermark": false,
     "goModuleName": "github.com/elmasrisaer/GoSDKTest",
     "githubRepoName": "GoSDKTest",
     "deliveryMethod": "zip",
     "hooks": {
-      "enabled": true,
-      "sourceDir": "/tmp/resources/hooks"
+      "enabled": false,
+      "sourceDir": ""
     },
     "usesFormData": false,
     "fileOutput": "/tmp",
@@ -119,7 +115,7 @@
     "pkg/purchases/request_params.go",
     "pkg/esim/request_params.go",
     "internal/clients/rest/hooks/hook.go",
-    "internal/clients/rest/hooks/custom_hook.go",
+    "internal/clients/rest/hooks/default_hook.go",
     "internal/clients/rest/handlers/retry_handler.go",
     "internal/clients/rest/handlers/request_validation_handler.go",
     "internal/validation/validation.go",
