liblab SDK update for version v1.0.2

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,13 @@
 *.dll
 *.so
 *.dylib
-.DStore
 
 # Output of go coverage
 *.out
 
 # Environment variables
 .env
+
+# OS generated files
+.DS_Store
+Thumbs.db
