--- a/.manifest.json
+++ b/.manifest.json
@@ -1,17 +1,17 @@
 {
-  "liblabVersion": "2.10.4",
-  "date": "2025-01-07T16:24:50.907Z",
+  "liblabVersion": "2.10.7",
+  "date": "2025-01-10T12:10:16.485Z",
   "config": {
     "language": "go",
-    "apiId": 1630,
+    "apiId": 1649,
     "sdkName": "Celitech",
-    "sdkVersion": "1.0.1",
+    "sdkVersion": "1.0.2",
     "languages": ["go"],
     "auth": ["oauth"],
-    "docs": ["snippets", "enhancedApiSpec"],
+    "docs": ["snippets"],
     "liblabVersion": "2",
     "deliveryMethods": ["zip"],
-    "apiVersion": "1.0.1",
+    "apiVersion": "1.0.2",
     "apiName": "Celitech",
     "specFilePath": "swagger.yaml",
     "languageOptions": {
@@ -19,7 +19,7 @@
         "goModuleName": "github.com/elmasrisaer/GoSDKTest",
         "githubRepoName": "GoSDKTest",
         "liblabVersion": "2",
-        "sdkVersion": "1.0.1"
+        "sdkVersion": "1.0.2"
       }
     },
     "publishing": {
@@ -168,6 +168,7 @@
     "internal/oauthtokenmanager/o_auth_token.go",
     "internal/oauthtokenmanager/o_auth_token_manager.go",
     "internal/clients/rest/handlers/o_auth_handler.go",
+    "internal/serialization/serialize_object.go",
     "pkg/oauth/get_access_token_ok_response.go",
     "pkg/purchases/create_purchase_request.go",
     "pkg/purchases/top_up_esim_request.go",
